welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:2: error: not found: value False
var fin = False
          ^BDRBuggle:33: error: not found: value True
  } else { fin= True}
                ^